--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="template_author">Mateusz Lutecki</string>
     <string name="connection_error_message">Failed to load currencies</string>
     <string name="retry">Retry</string>
+    <string name="rates_title">Rates</string>
 </resources>
